crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__diverts__I053-tunnel-onwards-divert-override.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/diverts/I053-tunnel-onwards-divert-override
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "This is A\n" [Continue]
> "Now in B.\n" [Ended]
outcome: Ended
