crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__diverts__I056-divert-targets-with-parameters.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/diverts/I056-divert-targets-with-parameters
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "5\n" [Done]
outcome: Done
