crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__diverts__I057-tunnel-onwards-after-tunnel.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/diverts/I057-tunnel-onwards-after-tunnel
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Hello...\n" [Continue]
> "...world.\n" [Continue]
> "The End.\n" [Ended]
outcome: Ended
