crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__diverts__I060-tunnel-onwards-divert-after-with-arg.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/diverts/I060-tunnel-onwards-divert-after-with-arg
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "8\n" [Ended]
outcome: Ended
