crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__diverts__I064-done-stops-thread.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/diverts/I064-done-stops-thread
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "" [Done]
outcome: Done
